2014-11-06  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r174740. <rdar://problem/rdar://problem/18883729>

    2014-10-15  Simon Fraser  <simon.fraser@apple.com>
    
            Sometimes can't scroll overflow:scroll areas in subframes
            https://bugs.webkit.org/show_bug.cgi?id=137746
            rdar://problem/18603560
    
            Reviewed by Tim Horton.
            
            Test that changes an overflow size in a subframe and then dumps the non-fast scrollable region.
    
            * platform/mac-wk2/tiled-drawing/scrolling/frames/resources/layouting-frame.html: Added.
            * platform/mac-wk2/tiled-drawing/scrolling/frames/scroll-region-after-frame-layout-expected.txt: Added.
            * platform/mac-wk2/tiled-drawing/scrolling/frames/scroll-region-after-frame-layout.html: Added.
    

2014-10-24  Said Abou-Hallawa  <sabouhallawa@apple.com>

        Clamp wordSpacing percentage value.
        https://bugs.webkit.org/show_bug.cgi?id=129350.

        Reviewed by Zalan Bujtas.

        Make sure that setting the CSS style wordSpacing property to very huge percentage
        value and blending this value with other values for animating key frames does
        not assert or crash. The expectation is to have this huge value to be clamped to
        the pre-defined min/max values for the CSS length type. So when blending the clamped
        value with other wordSpacing values, the result can't be NaN. This should be very
        similar to the case when it is set to a huge <length> value.

        * css3/infinite-word-spacing-expected.txt: Added.
        * css3/infinite-word-spacing.html: Added.

2014-11-04  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r175074. <rdar://problem/18856016>

    2014-10-22  Said Abou-Hallawa  <sabouhallawa@apple.com>
    
            SVG loaded through html <img> can't request to load any external resources.
            https://bugs.webkit.org/show_bug.cgi?id=137762.
    